final proof of copy

--- a/work.html
+++ b/work.html
@@ -17,9 +17,15 @@
 
     <link rel="stylesheet" type="text/css" href="main.css">
     <script src="main.js"></script>
+    
+    
+<!-- Favicon --> 
+      <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
 
-
-    <title>writing - rypmaloney</title>
+    <title>Projects - RyPMaloney</title>
 </head>
 
 <body>
@@ -28,7 +34,7 @@
 
 <!-- Navigation -->
     <nav class="navbar navbar-expand-md">
-        <a class="navbar-brand" href="index.html">RM</a>
+        <a class="navbar-brand" href="index.html">RyPM</a>
         <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -62,8 +68,8 @@
         <div class="row padding">
             <div class="col-md-12 col-lg-6 padding project">
                 <h2>Hosting a virtual event</h2>
-                <p> Over the past year I have managed and hosted over 50 virtual events, mostly in the form of public lectures. These talks have been massively popular, attracting thousands of attendees. I wrote this document to help train my colleagues in the Math department on using the Zoom webinar software. </p>
-                <p>The copy I produced as plain text, then transferred to a word document, where I created the document. Traditionally, I would use InDesign for the formatting, however I hadn’t spent much time in a word processor since my undergraduate days, so I thought I would resharpen older skills.</p>
+                <p> Over the past year, I have managed and hosted over 50 virtual events, mostly in the form of public lectures. These talks have been massively popular, attracting thousands of attendees. I wrote this document to help train my colleagues in the Math department on using the Zoom webinar software. </p>
+                <p>I produced the copy as plain text then transferred it to a word document where I created the document. Traditionally, I would use InDesign for the formatting; however, I hadn’t spent much time in Word over the past year, so I thought I would resharpen older skills.</p>
                 <br>
                 <a href="documents/virtualevent.pdf" target="_blank" class="btn btn-secondary">View the pdf</a>
 
@@ -94,8 +100,8 @@
 
             <div class="col-md-12 col-lg-6 padding project">
                 <h2>Trifold</h2>
-                <p> If you really want to evaluate this document, have it professionally printed—full-bleed—and folded accordingly. Aesthetically, I think it shines on paper. I produced this informational trifold from scratch using the Adobe suite, generally Photoshop and Indesign. The intended audience is visitors to the research center and Harvard members who hadn’t heard of us. </p>
-                <p> It is the first printed document you seen when walking into our building. I pride myself on that. </p>
+                <p> If you want to evaluate this document, have it professionally printed—full-bleed—and folded accordingly. Aesthetically, I think it shines on paper. I produced this informational trifold from scratch using the Adobe suite, generally Photoshop and Indesign. The intended audience is visitors to the research center and Harvard members who hadn’t heard of us. </p>
+                <p> It is the first printed document you see when walking into our building. I pride myself on that. </p>
 
                 <br>
                 <a href="documents/Trifold.pdf" target="_blank" class="btn btn-secondary">View the trifold</a>
@@ -110,9 +116,9 @@
         <div class="row padding">
             <div class="col-md-12 col-lg-6 padding project">
                 <h2>Hikenortheast</h2>
-                <p> Hikenortheast.com is a demo hiking website. My goal was to create a platform where I could feature some of my favorite outdoor adventures, and provide tips and tricks for intermediate hiking near Boston. I wanted to practice the developent process from begininng to end, without the asstance of frameworks.</p>
-                <p>The site is written from scratch in HTML5 and CSS3. Functionality is provided with some basic Jquery. All photography, design, and copy are my own.</p>
-                <p>This project is a perpetual work in progress. I'm currently exploring tranisitioning it to Wordpress.</p>
+                <p> Hikenortheast.com is a demo hiking blog. My goal was to create a platform where I could feature some of my favorite outdoor adventures, and provide tips and tricks for intermediate hiking near Boston. I wanted to practice the development process from beginning to end, without the assistance of frameworks.</p>
+                <p>The site is written from scratch in HTML5 and CSS3. Functionality is provided with some  Jquery. All photography, design, and copy are my own.</p>
+                <p>This project is a perpetual work in progress. I'm currently exploring transitioning it to WordPress.</p>
                 <br>
                 <a href="https://hikenortheast.com/" class="btn btn-secondary">Visit hikenortheast.com</a>
 
@@ -139,8 +145,8 @@
 
             <div class="col-md-12 col-lg-6 padding project">
                 <h2>Slideshow</h2>
-                <p>I put this slideshow together for the center director for a last-second meeting with a donor. I wrote the copy, composed the powerpoint and took the photos. </p>
-                <p> I think the most important guiding principle of a strong powerpoint presentation is a separation between the visual, and the spoken. No on enjoys watching the presenter read verbatim from the slides. Unfortunately, we didn’t have enough time to orchestrate an entire presentation, so this has more written content than I general aim for.</p>
+                <p>I put this slideshow together for the center director for a last-second meeting with a donor. I wrote the copy, composed the PowerPoint and took the photos. </p>
+                <p> I think the most important guiding principle of a strong PowerPoint presentation is a separation between the visual and the spoken. No one enjoys watching the presenter read verbatim from the slides. Unfortunately, we didn’t have enough time to orchestrate an entire presentation, so this has more written content than I generally would aim for.</p>
                     <br>
                     <a href="documents/slides.pdf" target="_blank" class="btn btn-secondary">View the sideshow</a>
             </div>
@@ -155,7 +161,7 @@
         <div class="row padding">
             <div class="col-md-12 col-lg-6 padding project">
                 <h2>Poster design</h2>
-                <p>One of my favorite tasks is poster design for our events. Here is a sampling of recent examples. I usually liscence vectors, edit them in Illustrator and Photoshop, then organize the poster in InDesign.</p>
+                <p>One of my favorite tasks is designing posters for our events. Here is a sampling of recent examples. I usually license vectors, edit them in Illustrator and Photoshop, then organize the poster in InDesign.</p>
                 <br>
                 <a href="documents/posters.pdf" class="btn btn-secondary" target="_blank">See a few examples</a>
 
