--- a/work.html
+++ b/work.html
@@ -75,7 +75,7 @@
 
             </div>
             <div class="col-md-12 col-lg-6 padding">
-                <a href="documents/virtualevent.pdf" target="_blank"> <img src="images/virtualscreen.png" target="_blank" class="img-fluid"></a>
+                <a href="documents/virtualevent.pdf" target="_blank"> <img src="images/virtualscreen.png" alt="Cover page of guide." target="_blank" class="img-fluid"></a>
             </div>
         </div>
 
@@ -87,10 +87,7 @@
 
         <div class="row">
             <div class="col-md-12 col-lg-6 padding project">
-                <object data="documents/trifold.pdf" type="application/pdf" width="100%" height="450px">
-                    <p>It appears you don't have a PDF plugin for this browser.
-                        No biggie... you can <a href="documents/Trifold.pdf">click here to download the PDF file.</a></p>
-                </object>
+                              <a href="documents/Trifold.pdf" target="_blank"> <img src="images/trifoldShot.png" alt="First page of trifold." class="img-fluid"></a>
 
 
 
@@ -112,7 +109,6 @@
 
     <!--Hikenortheast -->
 
-    <div class="container-fluid padding">
         <div class="row padding">
             <div class="col-md-12 col-lg-6 padding project">
                 <h2>Hikenortheast</h2>
@@ -124,7 +120,7 @@
 
             </div>
             <div class="col-md-12 col-lg-6 padding">
-                <a href="https://hikenortheast.com/" target="_blank"><img src="images/hikenortheast.png" class="img-fluid"></a>
+                <a href="https://hikenortheast.com/" target="_blank"><img src="images/hikenortheast.png" alt="hikenortheast homepage" class="img-fluid"></a>
             </div>
         </div>
 
@@ -135,10 +131,7 @@
         <!--Slideshow-->
         <div class="row">
             <div class="col-md-12 col-lg-6 padding project">
-              <object data="documents/slides.pdf" type="application/pdf" width="100%" height="450px">
-                    <p>It appears you don't have a PDF plugin for this browser.
-                        No biggie... you can <a href="documents/slides.pdf">click here to download the PDF file.</a></p>
-                </object>
+                            <a href="documents/slides.pdf" target="_blank"> <img src="images/ppt.png" alt="First page of slideshow." class="img-fluid"></a>
             </div>
 
 
@@ -151,7 +144,7 @@
                     <a href="documents/slides.pdf" target="_blank" class="btn btn-secondary">View the sideshow</a>
             </div>
         </div>
-    </div>
+
     <hr class="padding">
 
 
@@ -167,7 +160,7 @@
 
             </div>
             <div class="col-md-12 col-lg-6 padding">
-               <a href="documents/posters.pdf" target="_blank"> <img src="images/postercut.png" class="img-fluid"></a>
+               <a href="documents/posters.pdf" target="_blank"> <img src="images/postercut.png" alt="Image of a poster example." class="img-fluid"></a>
             </div>
         </div>
     </div>
